--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h4>Listen to one of their top songs here</h4>
             </div>
 
-            <audio src="music/am.mp3" id="audio"></audio>
+            <audio src="am.mp3" id="audio"></audio>
 
             <div class="music-controls">
                 
